--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -5,7 +5,7 @@
         display: grid;
         place-items: center;
         gap: 1rem;
-        padding-top: 2rem;
+        /* padding-top: 2rem; */
     }
 
     #timer-display h1 {
